--- a/contracts/package.json
+++ b/contracts/package.json
@@ -3,6 +3,19 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@openzeppelin/contracts": "^5.0.0",
-    "hardhat": "^2.18.1"
-  }
+    "hardhat": "^2.26.3"
+  },
+  "version": "1.0.0",
+  "description": "Try running some of the following tasks:",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs"
 }
